# api/src/main/resources/openapi.json
@@ -3265,7 +3265,7 @@
                             "id": "503bfb16230888af4924aa8f8250d7d348b862e267d75d3147f1998050b6da69",
                             "inputs": [
                               {
-                                "type": "asset",
+                                "type": "AssetInput",
                                 "outputRef": {
                                   "hint": 23412,
                                   "key": "798e9e137aec7c2d59d9655b4ffa640f301f628bf7c365083bb255f6aa5f89ef"
@@ -3275,7 +3275,7 @@
                             ],
                             "outputs": [
                               {
-                                "type": "Asset",
+                                "type": "AssetOutput",
                                 "alphAmount": "10000000000000000000",
                                 "address": "1AujpupFP4KWeZvqA7itsHY9cLJmx4qTzojVZrg8W9y",
                                 "tokens": [
@@ -3416,7 +3416,7 @@
                       "id": "503bfb16230888af4924aa8f8250d7d348b862e267d75d3147f1998050b6da69",
                       "inputs": [
                         {
-                          "type": "asset",
+                          "type": "AssetInput",
                           "outputRef": {
                             "hint": 23412,
                             "key": "798e9e137aec7c2d59d9655b4ffa640f301f628bf7c365083bb255f6aa5f89ef"
@@ -3426,7 +3426,7 @@
                       ],
                       "outputs": [
                         {
-                          "type": "Asset",
+                          "type": "AssetOutput",
                           "alphAmount": "10000000000000000000",
                           "address": "1AujpupFP4KWeZvqA7itsHY9cLJmx4qTzojVZrg8W9y",
                           "tokens": [
@@ -4367,7 +4367,7 @@
                         "id": "503bfb16230888af4924aa8f8250d7d348b862e267d75d3147f1998050b6da69",
                         "inputs": [
                           {
-                            "type": "asset",
+                            "type": "AssetInput",
                             "outputRef": {
                               "hint": 23412,
                               "key": "798e9e137aec7c2d59d9655b4ffa640f301f628bf7c365083bb255f6aa5f89ef"
@@ -4377,7 +4377,7 @@
                         ],
                         "outputs": [
                           {
-                            "type": "Asset",
+                            "type": "AssetOutput",
                             "alphAmount": "10000000000000000000",
                             "address": "1AujpupFP4KWeZvqA7itsHY9cLJmx4qTzojVZrg8W9y",
                             "tokens": [
@@ -4887,7 +4887,7 @@
                   "id": "503bfb16230888af4924aa8f8250d7d348b862e267d75d3147f1998050b6da69",
                   "inputs": [
                     {
-                      "type": "asset",
+                      "type": "AssetInput",
                       "outputRef": {
                         "hint": 23412,
                         "key": "798e9e137aec7c2d59d9655b4ffa640f301f628bf7c365083bb255f6aa5f89ef"
@@ -4897,7 +4897,7 @@
                   ],
                   "outputs": [
                     {
-                      "type": "Asset",
+                      "type": "AssetOutput",
                       "alphAmount": "10000000000000000000",
                       "address": "1AujpupFP4KWeZvqA7itsHY9cLJmx4qTzojVZrg8W9y",
                       "tokens": [
@@ -5545,7 +5545,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/BuildContract"
+                "$ref": "#/components/schemas/BuildContractDeployTx"
               },
               "examples": {
                 "Example0": {
@@ -5587,7 +5587,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/BuildContractResult"
+                  "$ref": "#/components/schemas/BuildContractDeployTxResult"
                 },
                 "example": {
                   "group": 2,
@@ -5914,7 +5914,7 @@
                   ],
                   "txOutputs": [
                     {
-                      "type": "Contract",
+                      "type": "ContractOutput",
                       "alphAmount": "1000000000000000000",
                       "address": "1AujpupFP4KWeZvqA7itsHY9cLJmx4qTzojVZrg8W9y",
                       "tokens": [
@@ -7649,7 +7649,7 @@
           }
         }
       },
-      "BuildContract": {
+      "BuildContractDeployTx": {
         "required": [
           "fromPublicKey",
           "bytecode"
@@ -7688,7 +7688,7 @@
           }
         }
       },
-      "BuildContractResult": {
+      "BuildContractDeployTxResult": {
         "required": [
           "group",
           "unsignedTx",
