# api/src/main/scala/org/alephium/api/ApiModel.scala
@@ -228,11 +228,11 @@ trait ApiModelCodec {
   implicit val txStatusRW: RW[TxStatus] =
     RW.merge(macroRW[Confirmed], macroRW[MemPooled.type], macroRW[NotFound.type])
 
-  implicit val buildContractRW: RW[BuildContract] = macroRW
+  implicit val buildContractRW: RW[BuildContractDeployTx] = macroRW
 
   implicit val buildScriptRW: RW[BuildScriptTx] = macroRW
 
-  implicit val buildContractResultRW: RW[BuildContractResult] = macroRW
+  implicit val buildContractResultRW: RW[BuildContractDeployTxResult] = macroRW
 
   implicit val buildScriptResultRW: RW[BuildScriptTxResult] = macroRW
 
